--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,14 @@
     <title>Clockdown</title>
   </head>
   <body>
-    <header id="header">
-<div class="container  text-center text-white display-2">
+    <header class="d-none d-md-inline" id="header">
+<div class="container mt-lg-5 text-center text-white display-2 ">
   Timer To Summer 2020
 </div>
     </header>
     <div id="banner" class=" container row justify-content-center">
-      <div class="leftSide col-4">
-     <table>
+      <div class="leftSide col-lg-4 col-md-10 order-2 order-xs-1 pt-lg-5 ">
+     <table class="mt-lg-5">
       <tr>
         <td id="days">3333</td>
         <td>Days</td>
@@ -34,16 +34,15 @@
             <td>Seconds</td></tr>
      </table>
       </div>
-      <div class="rightSide col-8 text-center">
-        <div id="leftSideInfo">
-          <div class="display-3">Summer is coming......</div>
+      <div class=" row align-items-center rightSide col-lg-8 col-md-10 text-center order-1 order-lg-2 order-xs-2">
+        <div id="leftSideInfo" class=" mb-xs-5">
+          <div class="align-items--end ">Summer is coming......</div>
         </div>
       </div>
-      <a href="http://tveverywhere.dx.am/" target="_blank" class=" text-center btn btn-lg btn-danger" ><i class="far fa-hand-point-right"></i>  Boor your Holiday NOW  <i class="far fa-hand-point-left"></i></a>
 
     </div>
     
-
+<footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="scripts/index.js"></script>
